# code-buddy

./: .gitignore  .ralphrc  Cargo.toml  Makefile  README.md  install-simple.sh  install.ps1  install.sh  lcov.info  tarpaulin-report.html
.github/workflows/: ci.yml  release.yml
Formula/: code-buddy.rb
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs
crates/cli/src/commands/: ask.rs  config_cmd.rs  install.rs  mod.rs  run.rs  setup.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: adapters.rs  lib.rs  mock.rs  model_list.rs  openai_compat.rs  registry.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: conversation.rs  lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: bash.rs  fs.rs  lib.rs  parser.rs  path_utils.rs  search.rs  web_fetch.rs  web_search.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs  message.rs  sse.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
src/: acp_server.rs  agents.rs  batch_runner.rs  bg_process.rs  cli.rs  computer.rs  config.rs  container.rs  context_files.rs  dirs.rs  hooks.rs  image_gen.rs  lib.rs  main.rs  memory.rs  mixture_of_agents.rs  profiles.rs  prompt_cache.rs  sandbox.rs  skills.rs  skills_hub.rs  skin_engine.rs  state.rs  streaming.rs  utils.rs  vision.rs
src/api/: mod.rs  tests.rs
src/cli/: tests.rs
src/commands/: agent.rs  agents.rs  auth.rs  clear.rs  commit.rs  compact.rs  config.rs  cron_cmd.rs  desktop.rs  doctor.rs  exit.rs  export_cmd.rs  feedback.rs  files.rs  first_run.rs  help_cmd.rs  hooks_cmd.rs  ide.rs  init.rs  install.rs  issues.rs  keybindings.rs  login.rs  mcp.rs  memory.rs  mod.rs  model.rs  output.rs  permissions_cmd.rs  plan.rs  plugin.rs  plugins_cmd.rs  print.rs  repl.rs  reset.rs  resume_cmd.rs  session.rs  setup.rs  share.rs  slash.rs  (+13 more)
src/config/: tests.rs
src/cron/: mod.rs
src/mlx/: mod.rs
src/plugins/: mod.rs
src/tools/: acp_tool.rs  bash.rs  batch_tool.rs  browser.rs  container_tool.rs  cron_tool.rs  executor.rs  file.rs  glob.rs  grep.rs  image_tool.rs  interactive.rs  mcp.rs  moa_tool.rs  mod.rs  profile_tool.rs  sandbox_tool.rs  skin_tool.rs  task.rs  tests.rs  web.rs
src/utils/: format.rs  model.rs  path.rs
