[workspace]
members = [
    "crates/cli",
    "crates/config",
    "crates/errors",
    "crates/providers",
    "crates/transport",
    "crates/telemetry",
    "crates/utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Code Buddy Team"]
publish = false

[workspace.dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }

# HTTP client (rustls avoids the openssl build dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Utilities
bytes = "1"
dirs = "5.0"
futures-util = "0.3"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
