[workspace]
resolver = "2"

[workspace.package]
version = "3.0.0"
edition = "2021"
license = "MIT"
authors = ["Code Buddy Team"]
publish = false

[package]
name = "code-buddy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AI coding assistant — Claude Code equivalent for your terminal"
license.workspace = true
homepage = "https://github.com/simpletoolsindia/code-buddy"
repository = "https://github.com/simpletoolsindia/code-buddy"
keywords = ["ai", "coding", "assistant", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lints.clippy]
field_reassign_with_default = "allow"
format_in_format_args = "allow"
manual_strip = "allow"
if_same_then_else = "allow"
lines_filter_map_ok = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
tokio-stream = "0.1"
futures-core = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
http = "1.1"
url = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
clap_complete = "4.5"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
console = "0.15"
colored = "2.0"
crossterm = "0.27"
terminal_size = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
miette = { version = "7.2", features = ["fancy"] }

# Utilities
bytes = "1"
dirs = "5.0"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
regex = "1"
walkdir = "2.5"
notify = "6.1"
zip = "2.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
os_info = "3.1"
sysinfo = "0.30"
mime_guess = "2.0"
urlencoding = "2.1"
whoami = "1.5"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File/text processing
scraper = "0.19"

# Lints
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow pre-existing style warnings from claude-rust source
field_reassign_with_default = "allow"
format_in_format_args = "allow"
manual_strip = "allow"
if_same_then_else = "allow"
lines_filter_map_ok = "allow"

[dependencies]
# CLI Framework
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
thiserror.workspace = true
colored.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
console.workspace = true
crossterm.workspace = true
miette.workspace = true
whoami.workspace = true
sysinfo.workspace = true
os_info.workspace = true

# Async Runtime
tokio.workspace = true
async-trait.workspace = true
tokio-stream.workspace = true
futures-core.workspace = true
futures-util.workspace = true

# HTTP & API
reqwest.workspace = true
http.workspace = true
url.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true

# File System
walkdir.workspace = true
notify.workspace = true
glob.workspace = true
regex.workspace = true

# Configuration
dirs.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
nanoid.workspace = true
tempfile.workspace = true
mime_guess.workspace = true
bytes.workspace = true
urlencoding.workspace = true
terminal_size.workspace = true

# Database
rusqlite.workspace = true

# Archives
zip.workspace = true

# Encoding
base64.workspace = true

# File/text processing
scraper.workspace = true

[dev-dependencies]
serial_test = "3"

[lib]
name = "code_buddy"
path = "src/lib.rs"

[[bin]]
name = "code-buddy"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
