[package]
name = "code-buddy"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Code Buddy — AI coding assistant for local and open-source LLMs"

[[bin]]
name = "code-buddy"
path = "src/main.rs"

[dependencies]
code-buddy-errors = { path = "../errors" }
code-buddy-config = { path = "../config" }
code-buddy-providers = { path = "../providers" }
code-buddy-runtime = { path = "../runtime" }
code-buddy-telemetry = { path = "../telemetry" }
code-buddy-tools = { path = "../tools" }
code-buddy-transport = { path = "../transport" }
code-buddy-utils = { path = "../utils" }
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
dirs.workspace = true

[lints]
workspace = true
