[package]
name = "code-buddy-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
code-buddy-errors = { path = "../errors" }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
