[package]
name = "code-buddy-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
code-buddy-errors = { path = "../errors" }
code-buddy-config = { path = "../config" }
code-buddy-transport = { path = "../transport" }
code-buddy-telemetry = { path = "../telemetry" }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
tracing.workspace = true
reqwest.workspace = true
bytes.workspace = true
futures-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
