[package]
name = "code-buddy-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Tool implementations and registry for Code Buddy"

[dependencies]
code-buddy-errors = { path = "../errors" }
code-buddy-transport = { path = "../transport" }
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tempfile.workspace = true
uuid.workspace = true
glob.workspace = true
regex.workspace = true
scraper.workspace = true
websearch = "0.1"
url.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
