[package]
name = "code-buddy-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
code-buddy-errors = { path = "../errors" }
code-buddy-config = { path = "../config" }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true

[lints]
workspace = true
